<resources>
    <string name="app_name">Movie</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Splash">Spash Frgament</string>
    <string name="PRIVACY">PRIVACY ⋁ </string>
    <string name="unlimited_movies">Unlimited\nentertainment</string>
    <string name="All_of_Boatflix">All of Boatflix\n</string>
    <string name="go">GO</string>
    <string name="Rectenly_Watched">Rectenly Watched</string>
    <string name="popular">Popular</string>
    <string name="see_all"><![CDATA[See all >]]></string>
    <string name="today_pick">Todays pick</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="cast">Cast</string>
</resources>