<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.Movie.FullscreenContainer"
    tools:context=".view.SplashFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:paddingBottom="200dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:text="@string/PRIVACY"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_gravity="top|right"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="20dp"
        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="48dp"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:text="@string/unlimited_movies"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center|top"
        android:layout_marginTop="650dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:text="@string/All_of_Boatflix"
        android:textAlignment="center"
        android:textColor="#C5C5C5"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center|top"
        android:layout_marginTop="720dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center|top"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/go"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:layout_marginTop="780dp"
        />

</FrameLayout>