<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    android:theme="@style/ThemeOverlay.Movie.FullscreenContainer"
    tools:context=".view.DetailFragment"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="10dp"
            android:fitsSystemWindows="true"
            >
            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_background"
                android:scaleType="center"
                >
            </ImageView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="10dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="20dp"
            android:background="#80000000"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="#80000000"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="40px"
                    android:layout_height="40px"
                    android:background="@drawable/round_button"
                    android:text="▶"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    >
                </androidx.appcompat.widget.AppCompatButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watch_trailer"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:padding="2dp"
                    >

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Movie Title"
        android:layout_gravity="center"
        android:textColor="#FF0000"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/reggaeoneregular"
        >
    </TextView>

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Marvel Studios - Black Widow"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        >
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_star"
            android:layout_gravity="center"
            >
        </ImageView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_star"
            android:layout_gravity="center"
            >
        </ImageView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_star"
            android:layout_gravity="center"
            >
        </ImageView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_star"
            android:layout_gravity="center"
            >
        </ImageView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_star_half"
            android:layout_gravity="center"
            >
        </ImageView>
        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.8/5"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            >
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"

        >
        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2021"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/round_item"
                android:padding="8dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2h 13m"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/round_item"
                android:padding="8dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tv_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12+"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/round_item"
                android:padding="8dp"
                >
            </TextView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Black Widow is a 2021 American superhero film based on Marvel Comics featuring the character of the same name."
        android:textColor="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/see_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="#FF0000"
            android:textSize="15sp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <view class="androidx.appcompat.app.AlertController$RecycleListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        >

    </view>

</LinearLayout>